--- a/tests/eTicaret.Tests.Unit/eTicaret.Tests.Unit.csproj
+++ b/tests/eTicaret.Tests.Unit/eTicaret.Tests.Unit.csproj
@@ -16,6 +16,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\eTicaret.Application\eTicaret.Application.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
